# Rsamtools

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  NAMESPACE  NEWS  README.md  Rsamtools.mk  Rsamtools.mk.win  configure  configure.ac  migration_notes.md  pileup_notes.txt
R/: Alignments-class.R  AllClasses.R  AllGenerics.R  asBam.R  cigar-utils.R  countBam.R  fileFormat.R  filterBam.R  findMateAlignment.R  idxstatsBam.R  indexBam.R  io_bam.R  mergeBam.R  methods-Alignments.R  methods-Alignments0.R  methods-Alignments1.R  methods-Alignments2.R  methods-ApplyPileupsParam.R  methods-BamFile.R  methods-BamFileList.R  methods-BamSampler.R  methods-BamViews.R  methods-BcfFile.R  methods-Cigar.R  methods-FaFile.R  methods-GappedAlignments.R  methods-PileupFiles.R  methods-PileupParam.R  methods-RsamtoolsFile.R  methods-RsamtoolsFileList.R  methods-ScanBVcfParam.R  methods-ScanBamParam.R  methods-ScanBcfParam.R  methods-TabixFile.R  mpileupBam.R  phred2ASCIIOffset.R  pileup.R  pileupBam.R  pkgconfig.R  quickBamCounts.R  (+22 more)
man/: Alignments-class.Rd  Alignments0-class.Rd  ApplyPileupsParam-class.Rd  BamFile-class.Rd  BamSampler-class.Rd  BamViews-class.Rd  BcfFile-class.Rd  FaFile-class.Rd  GappedAlignments-class.Rd  PileupFiles-class.Rd  PileupParam-class.Rd  Rsamtools-package.Rd  RsamtoolsFile-class.Rd  RsamtoolsFileList-class.Rd  ScanBamParam-class.Rd  ScanBcfParam-class.Rd  TabixFile-class.Rd  applyPileups.Rd  cigar-utils.Rd  defunct.Rd  deprecated.Rd  findMateAlignment.Rd  headerTabix.Rd  indexTabix.Rd  pileup.Rd  pileupBam.Rd  quickBamCounts.Rd  quickBamFlagSummary.Rd  (+17 more)
(+218 files in other folders)
